Update feature display on mobile, fix price estimate start value

--- a/assets/css/portal.css
+++ b/assets/css/portal.css
@@ -23,6 +23,10 @@ body {
     background: rgba(255, 255, 255, 0.3);
 }
 
+ul {
+    padding-left: 20px;
+}
+
 .whitened {
     background: rgba(246, 246, 246, 0.85);
 }
